# floptic

./: CMakeLists.txt  README.md
cmake/: CompilerFlags.cmake  DetectBackends.cmake
docs/: BENCHMARKS.md  BUILD_ENVIRONMENTS.md  IMPLEMENTATION_PLAN.md
include/floptic/: cli_parser.hpp  device_info.hpp  kernel_base.hpp  kernel_registry.hpp  precision.hpp  report.hpp  timer.hpp
results/: jlse_gpu_a100.md  jlse_gpu_b200.md  jlse_gpu_gh200.md  jlse_gpu_h100.md  jlse_gpu_mi100.md  jlse_gpu_mi250.md  jlse_gpu_mi300a.md  jlse_gpu_mi300x.md
src/: cli_parser.cpp  kernel_registry.cpp  main.cpp
src/device/: cpu_device_info.cpp  cuda_device_info.cu  hip_device_info.cpp
src/harness/: power_monitor.cpp  timer_cpu.cpp  timer_cuda.cu  validator.cpp  warmup.cpp
src/kernels/matrix/: gemm_cublas.cu  gemm_cublas_8bit.cu  gemm_cublas_blkscale.cu  gemm_cublas_emulated.cu  gemm_hipblaslt.cpp  gemm_rocblas.cpp
src/kernels/scalar/: scalar_fma_cpu.cpp  scalar_fma_cuda.cu  scalar_fma_hip.cpp
src/kernels/vector/: stream_triad_cuda.cu  stream_triad_hip.cpp  vector_axpy_cpu.cpp  vector_axpy_cuda.cu  vector_axpy_hip.cpp
src/report/: json_writer.cpp  md_writer.cpp  system_info.cpp
tests/: fp4_nvfp4_test.cu  fp8_minimal.cu  fp8_mxfp8_test.cu
